--- a/angular.json
+++ b/angular.json
@@ -4,6 +4,19 @@
   "newProjectRoot": "projects",
   "projects": {
     "PwaProject": {
+      "i18n": {
+        "sourceLocale" : "ja",
+        "locales": {
+          "en-US" : {
+            "translation":"src/locale/messages.en-US.xlf",
+            "baseHref": "en-US/"
+          },
+          "es" : {
+            "translation":"src/locale/messages.es.xlf",
+            "baseHref": "es/"
+          }
+        }
+      },
       "projectType": "application",
       "schematics": {},
       "root": "",
@@ -13,6 +26,11 @@
         "build": {
           "builder": "@angular-devkit/build-angular:application",
           "options": {
+            "localize":[
+              "en-US",
+              "es",
+              "ja"
+            ],
             "outputPath": "dist/pwa-project",
             "index": "src/index.html",
             "browser": "src/main.ts",
